@@ -12,6 +12,10 @@
 	$g_timer = new BC_Timer;
 	$g_timer->start_time();
 
+	# seed random number generator
+	list($usec,$sec)=explode(" ",microtime());
+	mt_srand($sec*$usec);
+
   	require( "constant_inc.php" );
 	require( "./default/config_inc1.php" );
 	if ( file_exists( "config_inc.php" ) ) {
